deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
    app.kubernetes.io/component: phpmyadmin
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/part-of: quotes-app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: phpmyadmin
    deployment: phpmyadmin
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
    app.kubernetes.io/component: phpmyadmin
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/part-of: quotes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
        deployment: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: bitnami/phpmyadmin
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
    app.kubernetes.io/component: phpmyadmin
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/part-of: quotes-app
spec:
  to:
    kind: Service
    name: phpmyadmin
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
